LBSD-2421 Reorganized some code preparing to create store for global tags

--- a/client/app/template/core/menu/views/menu.html
+++ b/client/app/template/core/menu/views/menu.html
@@ -51,7 +51,7 @@
     <div class="footer">
       <i class="icon-superdesk"></i>
       <span class="powered">Powered by Superdesk technology</span>
-      <span class="about"><a ng-click="aboutModal = aboutModal ? false: true"">About Live Blog</a></span>
+      <span class="about"><a ng-click="aboutModal = aboutModal ? false: true">About Live Blog</a></span>
     </div>
   </div>
 
