--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -518,6 +518,7 @@
                                 // for text input field (div[content-editable] looking like a textarea)
                                 .st-text-block {
                                     padding: 20px;
+                                    min-height: 65px;
                                     font-size: 1em;
                                     border: 1px solid lighten($grayLight, 25%);
                                     word-wrap: break-word;
@@ -896,5 +897,14 @@
         .btn {
             margin-right: 10px;
         }
+    }
+}
+
+tags-selector {
+    position: relative;
+    top: 20px;
+
+    .selector__label {
+        margin-bottom: 5px;
     }
 }
