LBSD-2426 Completing interface in output channels to show content filtered by tags - Implemented custom mapping for `archive` index in elastic search in order to be able to filer by array - Implemented UI for allow creating output channels with tags - Adjusted Default SEO Theme to check if output with tags is present and get only filtered data - Improved `embed` endpoint to get only filtered data whenever an output requires content filtered by tags

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -881,7 +881,7 @@
     }
 }
 
-
+.output-channels-modal.modal,
 .inactivity-modal.modal {
     .modal__dialog {
         max-width: 600px;
@@ -900,7 +900,7 @@
     }
 }
 
-tags-selector {
+.tags-selector {
     position: relative;
     top: 20px;
 
