LBSD-2429 Implement interface to allow picking tags for Syndication Consumers in blog settings

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -908,3 +908,16 @@
         margin-bottom: 5px;
     }
 }
+
+.preview-layout.consumers-settings {
+    width: 100% !important;
+
+    .list-pane > .content {
+        right: 400px;
+        top: 0px;
+    }
+
+    .preview-pane {
+        top: 0px;
+    }
+}
