--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -423,7 +423,8 @@ i.icon-star.orange {
 .form-input__hint {
     color: grey;
     font-size: 1.2rem;
-    padding-top: 2px;
+    padding-top: 6px;
     padding-bottom: 2px;
     display: inline-block;
+    line-height: 1.2rem;
 }
