--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -2,6 +2,7 @@
 // ----------------------------------------------------------------------------------------
 @import '~lb-variables.scss';
 @import '~lb-mixins.scss';
+@import '~react-calendar/dist/Calendar.css';
 
 .blogedit {
     //left menu
