LBSD-2433 Team members search improved - It now shows a "searching" text while typing and hitting backend - UI improved to be more user friendly - Added little label indicating that there are no found users when needed

--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -221,9 +221,17 @@ $PADDING: 20px;
     min-height: 240px;
 }
 
-.edit-contributors {
+.edit-contributors.edit-contributors {
     .search-result {
-        top: 69px!important;
+        top: 69px;
+        width: 440px;
+        left: 20px;
+    }
+
+    .search-result.no-records,
+    .search-result.searching {
+        height: 38px;
+        overflow: hidden;
     }
 }
 .pending-blog-member {
