LBSD-2467 Custom implementation of wrapper to avoid loading resources before the consent has been given

--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -19,6 +19,8 @@
 
   {% include "template-watermark.html" %}
 
+  {% include "template-gdpr-consent-placeholder.html" %}
+
   {% if settings.stickyPosition == 'top'%}
     <div class="timeline-top timeline-top--loaded">
       <section data-timeline-sticky class="lb-posts list-group{% if not api_response.stickyPosts._items|length %} sticky--empty{% endif %}">
