--- a/server/liveblog/themes/themes_assets/default/templates/template-item-embed.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-item-embed.html
@@ -1,6 +1,6 @@
 {% if ref.item.meta.provider_name|lower == 'youtube' and ref.item.meta.html %}
     <div class="item--embed__element lb-responsive-video">
-        {% if settings.youtubePrivateMode %}
+        {% if settings.youtubePrivateMode and false %}
             <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
                 title="{{ref.item.meta.title}}"
                 width="{{ref.item.meta.thumbnail_width}}"
@@ -8,7 +8,9 @@
                 src="{{ref.item.meta.url | replace("http:","https:") | replace("youtube.com","youtube-nocookie.com") | replace("watch?v=","embed/")}}">
             </iframe>
         {% else %}
+        <template class="consent_awaiting">
             {{ ref.item.meta.html | safe }}
+        </template>
         {% endif %}
     </div>
 {% elif (ref.item.meta.provider_name|lower == 'twitter') and ref.item.meta.html  %}
@@ -39,29 +41,33 @@
     {% if ref.item.meta.html %}
     <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
     {% endif %}
+
     {% if (ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit or (not ref.item.meta.html and ref.item.meta.thumbnail_url)) %}
     <article class="item--embed item--embed__wrapper">
         {% if not ref.item.meta.html and ref.item.meta.thumbnail_url %}
-        <a href="{{ ref.item.meta.original_url }}" target="_blank" class="{{ 'item--embed__illustration' if ref.item.meta.description else 'item--embed__only-illustration' }}">
-            <img src="{{ ref.item.meta.thumbnail_url }}"/>
-    </a>
-    {% endif %}
-    {% if ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit %}
-        <div class="item--embed__info">
-            {% if ref.item.meta.title %}
-            <div class="item--embed__title">
-                <a href="{{ ref.item.meta.original_url }}" target="_blank" title="{{ ref.item.meta.title }}">{{ ref.item.meta.title }}</a>
-            </div>
-            {% endif %}
-            {% if ref.item.meta.description %}
-            <div class="item--embed__description">{{ ref.item.meta.description }}</div>
-            {% endif %}
-            {% if ref.item.meta.credit %}
-            <div class="item--embed__credit">{{ ref.item.meta.credit }}</div>
-            {% endif %}
-        </div>
+            <a href="{{ ref.item.meta.original_url }}" target="_blank" class="{{ 'item--embed__illustration' if ref.item.meta.description else 'item--embed__only-illustration' }}">
+                <img src="{{ ref.item.meta.thumbnail_url }}"/>
+            </a>
         {% endif %}
 
+        {% if ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit %}
+            <div class="item--embed__info">
+                {% if ref.item.meta.title %}
+                <div class="item--embed__title">
+                    <a href="{{ ref.item.meta.original_url }}" target="_blank" title="{{ ref.item.meta.title }}">{{ ref.item.meta.title }}</a>
+                </div>
+                {% endif %}
+
+                {% if ref.item.meta.description %}
+                <div class="item--embed__description">{{ ref.item.meta.description }}</div>
+                {% endif %}
+
+                {% if ref.item.meta.credit %}
+                <div class="item--embed__credit">{{ ref.item.meta.credit }}</div>
+                {% endif %}
+            </div>
+        {% endif %}
     </article>
     {% endif %}
+
 {% endif %}
