--- a/server/liveblog/themes/themes_assets/default/templates/template-gdpr-consent-placeholder.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-gdpr-consent-placeholder.html
@@ -1,6 +1,6 @@
-<template id="lb_consent-placeholder-tmpl">
-    <div class="lb_consent-placeholder">
+<template id="lb_consent--placeholder-tmpl">
+    <div class="lb_consent--placeholder">
         This content is not available without cookies.
-        <a href="javascript:;" class="ce-accept">Enable Cookies</a>
+        <a href="javascript:;" class="lb-content--accept">Enable Cookies</a>
     </div>
 </template>
