--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -20,6 +20,25 @@
   }
 }
 
+.lb_consent--placeholder {
+    position: relative;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .lb_consent--description {
+      background: #ddd;
+      width: 80%;
+      position: absolute;
+      bottom: 6px;
+      padding: 20px 20px;
+      border-top: 2px solid #e9e9e9;
+      border-right: 2px solid #e9e9e9;
+    }
+}
+
 .lb-timeline {
     position: relative;
     font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
