LBSD-2467 Completed implementation of gdpr feature in classic theme

--- a/server/liveblog/themes/themes_assets/classic/views/embeds/consent-placeholder.html
+++ b/server/liveblog/themes/themes_assets/classic/views/embeds/consent-placeholder.html
@@ -1,10 +1,8 @@
 <div class="lb_consent--placeholder">
-    <!--<img src="{{ assets_root }}images/consent-placeholder.svg" />-->
-
     <div class="lb_consent--description">
         <div lb-bind-html html-content="{{ timeline.settings.gdprConsentText }}"></div>
 
-        <button href="javascript:;" class="comment__button lb-content--accept">
+        <button href="javascript:;" class="btn btn-primary lb_consent--accept">
             Activate
         </button>
     </div>
