--- a/server/liveblog/themes/themes_assets/default/templates/template-gdpr-consent-placeholder.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-gdpr-consent-placeholder.html
@@ -3,7 +3,7 @@
         <img src="{{ assets_root }}images/consent-placeholder.svg" />
         <div class="lb_consent--description">
             {{settings.gdprConsentText|safe}}
-            <button href="javascript:;" class="comment__button lb-content--accept">
+            <button href="javascript:;" class="comment__button lb_consent--accept">
                 Activate
             </button>
         </div>
