--- a/server/liveblog/themes/themes_assets/classic/styles/embed.css
+++ b/server/liveblog/themes/themes_assets/classic/styles/embed.css
@@ -74,6 +74,27 @@ button.active {
 .border-bottom {
     border-bottom: 1px solid #CBCBCB;
 }
+
+.lb_consent--placeholder {
+    background: url(../images/consent-placeholder.svg) center no-repeat;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 350px;
+    display: flex;
+    align-items: center;
+}
+
+.lb_consent--placeholder .lb_consent--description {
+    bottom: 6px;
+    padding: 20px 20px;
+    text-align: center;
+    width: 100%;
+}
+
+.lb_consent--placeholder .lb_consent--description .lb_consent--accept {
+    margin-top: 10px;
+}
+
 .lb-timeline {
     clear: both;
     background-color: white;
