--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -21,21 +21,22 @@
 }
 
 .lb_consent--placeholder {
-    position: relative;
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
+    background: url(../images/consent-placeholder.svg) center no-repeat;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 350px;
+    display: flex;
+    align-items: center;
 
     .lb_consent--description {
-      background: #ddd;
-      width: 80%;
-      position: absolute;
       bottom: 6px;
       padding: 20px 20px;
-      border-top: 2px solid #e9e9e9;
-      border-right: 2px solid #e9e9e9;
+      text-align: center;
+      width: 100%;
+    }
+
+    .lb_consent--accept {
+      margin-top: 10px;
     }
 }
 
