--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -1,10 +1,20 @@
 <!-- These are cached for most users anyway, so why bother with arbitrary scripts -->
-<template class="lb_consent--awaiting" data-no-placeholder>
+<template class="lb_consent--awaiting" data-provider-url="http://instagram.com" data-no-placeholder>
 <script async defer src="https://platform.instagram.com/en_US/embeds.js"></script>
+</template>
+
+<template class="lb_consent--awaiting" data-provider-url="http://twitter.com" data-no-placeholder>
 <script async defer src="https://platform.twitter.com/widgets.js"></script>
+</template>
+
+<template class="lb_consent--awaiting" data-provider-url="http://facebook.com" data-no-placeholder>
 <script async defer src="https://connect.facebook.net/en_US/all.js#xfbml=1&status=0&appId="></script>
+</template>
+
+<template class="lb_consent--awaiting" data-provider-url="http://youtube.com" data-no-placeholder>
 <script async defer src="https://www.youtube.com/player_api"></script>
 </template>
+
 <script src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 <style class="embedly-css">
     .card .hdr{
