LBSD-2467 Implementing translation strings for 'Activate' button

--- a/server/liveblog/themes/themes_assets/default/templates/template-gdpr-consent-placeholder.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-gdpr-consent-placeholder.html
@@ -3,7 +3,7 @@
         <div class="lb_consent--description">
             {{settings.gdprConsentText|safe}}
             <button href="javascript:;" class="comment__button lb_consent--accept">
-                Activate
+                {{ translate('Activate') }}
             </button>
         </div>
     </div>
