LBSD-2467 Implemented consent translation in Classic theme

--- a/server/liveblog/themes/themes_assets/classic/views/embeds/consent-placeholder.html
+++ b/server/liveblog/themes/themes_assets/classic/views/embeds/consent-placeholder.html
@@ -3,7 +3,7 @@
         <div lb-bind-html html-content="{{ timeline.settings.gdprConsentText }}"></div>
 
         <button href="javascript:;" class="btn btn-primary lb_consent--accept">
-            Activate
+            {{ 'Activate' | translate }}
         </button>
     </div>
 </div>
