LBSD-2480 Fixed arrow position for carousel-slides

--- a/server/liveblog/themes/themes_assets/amp/templates/template-item-gallery.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-item-gallery.html
@@ -1,3 +1,11 @@
+<style>
+  .i-amphtml-slide-item>* {
+    height: unset;
+    width: 100%;
+    overflow: hidden;
+  }
+</style>
+
 <div class="lb-item">
   <amp-carousel class="carousel1"
   layout="responsive"
