--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -87,7 +87,7 @@
             <!-- item start -->
             <div class="lb-item {{ref.item.item_type}}">
           {% endif %}
-          {% if ref.item.item_type == "embed" %}
+          {% if ref.item.item_type == "embed" or ref.item.meta.provider_name == "YoutubeUpload" %}
             {% include "template-item-embed.html" %}
           {% elif ref.item.item_type == "image" and galleryItem %}
             {% include "template-item-galleryImage.html" %}
