--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -1,10 +1,32 @@
-<!-- These are cached for most users anyway, so why bother with arbitrary scripts -->
+<script>
+    function processInstagram() {
+        try{
+            instgrm.Embeds.process();
+            console.log('processing instagram embeds');
+        } catch(err) {console.log('instgrm script not loaded')}
+    }
+
+    function processTwitter() {
+        try{
+            twttr.widgets.load();
+            console.log('processing twitter embeds');
+        } catch(err) {console.log('twttr script not loaded')}
+    }
+
+    window.fbAsyncInit = function() {
+        try {
+            FB.init({ xfbml: true, version: 'v6.0' });
+            console.log('init facebook script');
+        } catch(err) {console.log('facebook script not loaded')}
+    }
+</script>
+
 <template class="lb_consent--awaiting" data-provider-url="http://instagram.com" data-no-placeholder>
-<script async defer src="https://platform.instagram.com/en_US/embeds.js"></script>
+<script async defer src="https://platform.instagram.com/en_US/embeds.js" onload="processInstagram()"></script>
 </template>
 
 <template class="lb_consent--awaiting" data-provider-url="http://twitter.com" data-no-placeholder>
-<script async defer src="https://platform.twitter.com/widgets.js"></script>
+<script async defer src="https://platform.twitter.com/widgets.js" onload="processTwitter()"></script>
 </template>
 
 <template class="lb_consent--awaiting" data-provider-url="http://facebook.com" data-no-placeholder>
