LBSD-2467 Trying to prevent any future issue with SameSite cookie attribute

--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -37,7 +37,7 @@
 <script async defer src="https://www.youtube.com/player_api"></script>
 </template>
 
-<script src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+<script src="https://cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 <style class="embedly-css">
     .card .hdr{
       display: none;
@@ -116,4 +116,4 @@
         });
     }
 </script>
-<script async defer src="//cdn.embed.ly/player-0.1.0.min.js" onload="onPlayerJSReady()"></script>
+<script async defer src="https://cdn.embed.ly/player-0.1.0.min.js" onload="onPlayerJSReady()"></script>
