LBSD-2480 Resolved AMP validation error: The parent tag is 'article'

--- a/server/liveblog/themes/themes_assets/amp/less/tags.less
+++ b/server/liveblog/themes/themes_assets/amp/less/tags.less
@@ -9,6 +9,12 @@ body.lb-wrapBody {
 
 }
 
+.i-amphtml-slide-item>* {
+    height: unset;
+    width: 100%;
+    overflow: hidden;
+}
+
 .lb-timeline {
 
   h1 {
