--- a/server/liveblog/blogs/templates/embed.html
+++ b/server/liveblog/blogs/templates/embed.html
@@ -49,7 +49,8 @@
         api_host: '{{ api_host }}',
         assets_root: '{{ assets_root }}',
         debug: {{ debug | tojson | safe }},
-        i18n: {{ i18n | tojson | safe }}
+        i18n: {{ i18n | tojson | safe }},
+        global_tags: {{ global_tags | tojson | safe }}
     };
 </script>
     {% if debug %}
