--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -447,6 +447,71 @@
 
   // Sorting Bar End
 
+  // Title Bar
+  .tags-filter-bar {
+    margin-right: 10px;
+  }
+  .tags-filter-bar__title {
+    float: none;
+    margin-right: 0px;
+    padding-bottom: 12px;
+    text-transform: uppercase;
+    position: absolute;
+    color: #adadad;
+    font-size: 11px;
+    font-weight: 500;
+  }
+  .tags-filter-bar__orders {
+    float: left
+  }
+  .tags-filter-bar__order {
+    float: left;
+    display: block;
+    margin-right: 10px;
+    padding-bottom: 8px;
+    cursor: pointer;
+    color: #999999;
+    font-size: 1em;
+    transition: color .1s ease-out;
+  }
+  .tags-filter-bar__order--active,
+  .tags-filter-bar__order:hover {
+    color: @black;
+    margin-bottom: -2px;
+    border-bottom: 2px solid @black;
+    border: none;
+    margin-bottom: 0px;
+  }
+  .tags-filter-bar__dropdownBtn {
+    display: block;
+    min-width: 120px;
+    background: transparent url('../images/dropdown_arrow.svg') right center no-repeat;
+    padding-right: 20px;
+    cursor: pointer;
+    padding-left: .5rem;
+    position: relative;
+    z-index: 2;
+  }
+  .tags-filter-bar__dropdownContent {
+    display: none;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    z-index: 1;
+    background-color: @white;
+    padding: .8em .8rem .8rem .8rem;
+    margin-top: 10px;
+    margin-left: 5px;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
+    &--active {
+      display: block;
+    }
+  }
+  .tags-filter-bar__order:last-child {
+    padding-bottom: 0px;
+  }
+  // Title Bar End
+
   // Posts
 
   .lb-posts {
@@ -1248,6 +1313,17 @@ body .scorecard-top__info {
         width: 10px;
         height: 10px;
         margin: -8px 4px 0 6px;
+      }
+
+      .tags-filter-bar {
+        margin-top: -6px;
+      }
+      .tags-filter-bar__title {
+          display: none;
+      }
+      .tags-filter-bar__orders {
+          position: relative;
+          padding-left: 0 !important;
       }
 
       .lb-post--highlighted {
