--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -118,7 +118,9 @@
       position: relative;
       transition:opacity .25s;
   }
-
+  .timeline-body--active {
+    margin-top: 110px;
+  }
   .timeline-body--loaded {
       opacity: 1;
   }
@@ -494,21 +496,37 @@
   }
   .tags-filter-bar__dropdownContent {
     display: none;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    z-index: 1;
-    background-color: @white;
-    padding: .8em .8rem .8rem .8rem;
-    margin-top: 10px;
-    margin-left: 5px;
-    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
     &--active {
-      display: block;
+      display: inline-grid;
+      position: absolute;
+      z-index: 5;
+      background-color: @white;
+      padding: .8em .8rem .8rem .8rem;
+      margin-top: 10px;
+      margin-left: 5px;
+      box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
+      min-width: 110px;
+      max-height: 79px;
+      overflow-y: scroll;
     }
   }
+  
   .tags-filter-bar__order:last-child {
     padding-bottom: 0px;
+  }
+
+  .tags-filter-bar__dropdownContent--active::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  .tags-filter-bar__dropdownContent--active::-webkit-scrollbar-thumb {
+    background-color: #56c491;
+    color: #56c491;
+    width: 5px;
+  }
+
+  .tags-filter-no_filter{
+    text-align: center;
   }
   // Title Bar End
 
