--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -79,12 +79,18 @@
             Tags Filter
           </div>
           <div class="tags-filter-bar__dropdownContent">
-            {% for tag in global_tags -%}
-            <div class="tags-filter-bar__order">
-              <input type="checkbox" name="tags-filter-tag-{{ tag }}" value="{{ tag }}" data-tags-filter-option/>
-              <label for="tags-filter-tag-{{ tag }}">{{ tag }}</label>
-            </div>
-            {%- endfor %}
+            {% if global_tags %}
+              {% for tag in global_tags -%}
+              <div class="tags-filter-bar__order">
+                <input type="checkbox" name="tags-filter-tag-{{ tag }}" value="{{ tag }}" data-tags-filter-option/>
+                <label for="tags-filter-tag-{{ tag }}">{{ tag }}</label>
+              </div>
+              {%- endfor %}
+            {% else %}
+              <div class="tags-filter-no_filter">
+                No Filter Available
+              </div>
+            {% endif %}
           </div>
         </div>
       </div>
