LSBD-2490 Pushing down of posts on opening tag filter stopped

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -118,9 +118,7 @@
       position: relative;
       transition:opacity .25s;
   }
-  .timeline-body--active {
-    margin-top: 110px;
-  }
+
   .timeline-body--loaded {
       opacity: 1;
   }
@@ -505,8 +503,8 @@
       margin-top: 10px;
       margin-left: 5px;
       box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
-      min-width: 110px;
-      max-height: 79px;
+      width: 110px;
+      max-height: 80px;
       overflow-y: scroll;
     }
   }
