--- a/server/liveblog/themes/themes_assets/amp/templates/template-item-gallery.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-item-gallery.html
@@ -1,11 +1,11 @@
 <div class="lb-item">
-  <amp-carousel class="carousel1"
+  <amp-carousel
   layout="responsive"
   height="450"
   width="500"
   type="slides">
     {% for ref in item.groups[1].refs %}
-      <div>
+      <div style="height: auto;">
         <amp-img src="{{ ref.item.meta.media.renditions.viewImage.href }}"
         layout="responsive"
         width="{{ ref.item.meta.media.renditions.viewImage.width }}"
