LBSD-2490 Fix: Hiding the dropdown if no tags available in global_preferences for default theme

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -503,9 +503,11 @@
       margin-top: 10px;
       margin-left: 5px;
       box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
-      width: 100px;
       max-height: 80px;
       overflow-y: scroll;
+      min-width:100px;
+      max-width: 120px;
+      white-space: nowrap;
     }
   }
   
@@ -515,9 +517,16 @@
 
   .tags-filter-bar__dropdownContent--active::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
   }
 
   .tags-filter-bar__dropdownContent--active::-webkit-scrollbar-thumb {
+    background-color: #56c491;
+    color: #56c491;
+    width: 5px;
+  }
+
+  .tags-filter-bar__dropdownContent--active::-webkit-scrollbar- {
     background-color: #56c491;
     color: #56c491;
     width: 5px;
