--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -85,7 +85,7 @@
             <input type="checkbox" name="tags-filter-tag-{{ tag }}" value="{{ tag }}" data-tags-filter-option/>
             <label for="tags-filter-tag-{{ tag }}">{{ tag }}</label>
           </div>
-          {%- endfor %}
+          {% endfor %}
         </div>
       </div>
     </div>
