--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     {% endif %}
-    {% if global_tags %}
+    {% if global_tags|length > 1 %}
     <div class="tags-filter-bar">
       <div class="tags-filter-bar__orders">
         <div class="tags-filter-bar__dropdownBtn" data-js-tags_filter_dropdown_button>
