--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -81,9 +81,11 @@
         </div>
         <div class="tags-filter-bar__dropdownContent">
           {% for tag in global_tags -%}
-          <div class="tags-filter-bar__order" data-tags-filter-option>
-            <input type="checkbox" name="tags-filter-tag-{{ tag }}" value="{{ tag }}"/>
-            <label for="tags-filter-tag-{{ tag }}">{{ tag }}</label>
+          <div class="tags-filter-bar__order">
+            <label>
+              <input type="checkbox" value="{{ tag }}" data-tags-filter-option/>
+              {{ tag }}
+            </label>
           </div>
           {% endfor %}
         </div>
