LBSD-2487 Improved ad rotation in AMP Theme. Note: we should consider using a newer approach, maybe amp has a better handling for this now

--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -825,18 +825,18 @@
   }
 
   .lb-post-sticky {
-    // background-image: url("../images/exclamation_sticky.svg");
     background-color: #C6C6C6;
     margin-top: -2px;
   }
 
   .lb-advertisement {
       position: relative;
-      left: 68px;
+      left: 0px;
       color: #767676;
       font-size: 0.75rem;
   }
 
+  .lb-item-advertisement,
   .lb-item-advertisement-local {
     margin-top: 25px;
 
