LBSD-2519 Updated blog access notification link

--- a/client/app/template/core/menu/notifications/views/notifications.html
+++ b/client/app/template/core/menu/notifications/views/notifications.html
@@ -38,7 +38,7 @@
                                 <b>{{:: notification.user_name }}</b>
                                 <span translate>request access to </span>
                                 <i>
-                                    <a ng-href="#/liveblog/edit/{{ notification.item }}?panel=editor" title="{{:: notification.data.item_slugline }}">
+                                    <a ng-href="#/liveblog/settings/{{ notification.item }}?tab=team" title="{{:: notification.data.item_slugline }}">
                                     {{:: notification.data.item_slugline }}
                                     </a>
                                 </i>
