LBSD-785 Removed angular-embedly and adjusted Default SEO Theme to work properly with new iframely embeds

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -485,9 +485,10 @@
   .tags-filter-bar__dropdownBtn {
     display: block;
     min-width: 120px;
-    background: transparent url('../images/dropdown_arrow.svg') right center no-repeat;
+    background: transparent url('../images/dropdown_arrow.svg') right 8px no-repeat;
     cursor: pointer;
     padding-left: .5rem;
+    padding-right: .5rem;
     position: relative;
     z-index: 2;
   }
@@ -509,7 +510,7 @@
       white-space: nowrap;
     }
   }
-  
+
   .tags-filter-bar__order:last-child {
     padding-bottom: 0px;
   }
@@ -1425,12 +1426,12 @@ body .scorecard-top__info {
       .header-bar {
           margin: 10px 0 0 0px;
       }
-      
+
       .sorting-bar {
         margin-top: -6px;
         width: 35%;
       }
-      
+
       .tags-filter-bar {
         width: 35%;
       }
