--- a/server/liveblog/themes/themes_assets/default/templates/template-item-embed.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-item-embed.html
@@ -1,13 +1,14 @@
 {% set meta = ref.item.meta %}
+{% set provider_name = meta.provider_name|lower %}
 
-{% if ref.item.meta.provider_name|lower == 'youtube' and ref.item.meta.html %}
+{% if provider_name == 'youtube' and ref.item.meta.html %}
     {% if settings.youtubePrivateMode %}
         <div class="item--embed__element lb-responsive-video">
             <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
                 title="{{ref.item.meta.title}}"
                 width="{{ref.item.meta.thumbnail_width}}"
                 height="{{ref.item.meta.thumbnail_height}}"
-                src="{{ref.item.meta.url | replace("http:","https:") | replace("youtube.com","youtube-nocookie.com") | replace("watch?v=","embed/")}}">
+                src="{{ref.item.meta.url | replace('http:', 'https:') | replace('youtube.com', 'youtube-nocookie.com') | replace('watch?v=', 'embed/')}}">
             </iframe>
         </div>
     {% else %}
@@ -17,22 +18,25 @@
             </div>
         </template>
     {% endif %}
-{% elif (ref.item.meta.provider_name|lower == 'twitter') and ref.item.meta.html  %}
+{% elif provider_name == 'twitter' and ref.item.meta.html  %}
     <template class="lb_consent--awaiting" data-provider-url="{{ ref.item.meta.provider_url }}">
         <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
     </template>
-{% elif ref.item.meta.provider_name|lower == 'facebook' and ref.item.meta.original_url %}
-    <template class="lb_consent--awaiting" data-provider-url="{{ ref.item.meta.provider_url }}">
-        <blockquote class="embedly-card" data-card-controls="0">
-            <h4><a href="{{ ref.item.meta.original_url }}">{{ ref.item.meta.credit }}</a></h4>
-            <p>{{ ref.item.meta.title }}</p>
-        </blockquote>
+{% elif provider_name == 'facebook' and meta.original_url %}
+    <template class="lb_consent--awaiting" data-provider-url="{{ meta.provider_url }}">
+        <div class="fb-post" data-href="{{ meta.original_url }}" data-show-text="true">
+            <blockquote cite="{{ meta.original_url }}" class="fb-xfbml-parse-ignore">
+                <h4><a href="{{ meta.original_url }}">{{ meta.credit }}</a></h4>
+                <p>{{ meta.title }}</p>
+                <div class="item--embed__description">{{ meta.description }}</div>
+            </blockquote>
+        </div>
     </template>
-{% elif ref.item.meta.provider_name|lower == 'instagram' and ref.item.meta.original_url %}
+{% elif provider_name == 'instagram' and ref.item.meta.original_url %}
     <template class="lb_consent--awaiting" data-provider-url="{{ ref.item.meta.provider_url }}">
         {% include "template-embed-instagram.html" %}
     </template>
-{% elif ref.item.meta.provider_name|lower == 'brightcove' and ref.item.meta.html %}
+{% elif provider_name == 'brightcove' and ref.item.meta.html %}
     <template class="lb_consent--awaiting" data-provider-url="{{ ref.item.meta.provider_url }}">
         <div class="item--embed__element lb-responsive-video">{{ ref.item.meta.html | safe }}</div>
     </template>
