--- a/server/liveblog/themes/themes_assets/classic/views/embeds/facebook.html
+++ b/server/liveblog/themes/themes_assets/classic/views/embeds/facebook.html
@@ -1,4 +1,7 @@
-<blockquote class="embedly-card" data-card-controls="0">
-    <h4><a href="{{ item.meta.original_url }}">{{ item.meta.credit }}</a></h4>
-    <p>{{ item.meta.title }}</p>
-</blockquote>
+<div class="fb-post" data-href="{{ item.meta.original_url }}" data-show-text="true">
+    <blockquote cite="{{ item.meta.original_url }}" class="fb-xfbml-parse-ignore">
+        <h4><a href="{{ item.meta.original_url }}">{{ item.meta.credit }}</a></h4>
+        <p>{{ item.meta.title }}</p>
+        <div class="item--embed__description">{{ item.meta.description }}</div>
+    </blockquote>
+</div>
