--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -19,6 +19,16 @@
             console.log('init facebook script');
         } catch(err) {console.log('facebook script not loaded')}
     }
+
+    function processEmbedly() {
+        embedly("defaults", {
+            cards: {
+                key: '82645d4daa7742cc891c21506d28235e',
+                align: 'left',
+                chrome: 0
+            }
+        });
+    }
 </script>
 
 <template class="lb_consent--awaiting" data-provider-url="http://instagram.com" data-no-placeholder>
@@ -37,24 +47,9 @@
 <script async defer src="https://www.youtube.com/player_api"></script>
 </template>
 
-<script src="https://cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-<style class="embedly-css">
-    .card .hdr{
-      display: none;
-    }
-    body#cards {
-        padding: 0px;
-    }
-</style>
-<script>
-    embedly("defaults", {
-        cards: {
-            key: '82645d4daa7742cc891c21506d28235e',
-            align: 'left',
-            chrome: 0
-        }
-    });
-</script>
+<script async defer src="https://cdn.embedly.com/widgets/platform.js" charset="UTF-8" onload="processEmbedly()"></script>
+
+<script async defer src="https://cdn.iframe.ly/embed.js?key=a5ee9a89addd13b7a2e3a48c23e74e8d" onload="iframely.load()"></script>
 
 <script>
     var SET_FLAG = 'player-set';
@@ -117,3 +112,12 @@
     }
 </script>
 <script async defer src="https://cdn.embed.ly/player-0.1.0.min.js" onload="onPlayerJSReady()"></script>
+
+<style class="embedly-css">
+    .card .hdr{
+      display: none;
+    }
+    body#cards {
+        padding: 0px;
+    }
+</style>
